--- a/snake.html
+++ b/snake.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="index.css" rel="stylesheet" type="text/css">
+    <link href="snake.css" rel="stylesheet" type="text/css">
   <title>Змейка</title>
 </head>
 <body>
